fixed bug on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   background-color: rgb(27 106 147);
   background-image: url('/waterBackground.jpg');
-  background-attachment: fixed !important;
+  background-attachment: fixed;
   padding-bottom: 0;
   margin: 0;
   cursor: url('/cursor.png'), auto;
