--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -7,6 +7,7 @@
   width: 100%;
   max-width: 700px;
   backdrop-filter: blur(10px);
+  grid-template-rows: min-content !important;
 }
 
 .projectTitle {
@@ -56,7 +57,7 @@
   font-weight: 600;
 }
 
-@media screen and (min-width: 521px) {
+@media screen and (min-width: 751px) {
   .wrapper {
     grid-template-areas:
       "projectTitle projectTitle"
@@ -68,13 +69,11 @@
     margin: 2rem;
   }
   .projectImage {
-    height: 100%;
-
-  width: 100%;
+    max-height:385px;
   }
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 750px) {
   .wrapper {
     grid-template-areas:
       "projectTitle"
